--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-12 09:06+0200\n"
-"PO-Revision-Date: 2023-01-12 11:48+0200\n"
+"PO-Revision-Date: 2023-01-19 09:11+0200\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
 "Language: fi\n"
@@ -1857,11 +1857,11 @@ msgstr "Toimenpide"
 
 #: content/models.py
 msgid "Strategy"
-msgstr "strateginen"
+msgstr "Strategia"
 
 #: content/models.py
 msgid "Strategies"
-msgstr "strategiat"
+msgstr "Strategiat"
 
 #: content/models.py
 msgid "site title"
