--- a/locale/en_AU/LC_MESSAGES/django.po
+++ b/locale/en_AU/LC_MESSAGES/django.po
@@ -1484,11 +1484,11 @@ msgid "user feedback"
 msgstr ""
 
 #: feedback/models.py
-msgid "user feedbacks"
+msgid "user feedback"
 msgstr ""
 
 #: feedback/wagtail_admin.py
-msgid "User feedbacks"
+msgid "User feedback"
 msgstr ""
 
 #: images/models.py
