--- a/locale/en_GB/LC_MESSAGES/django.po
+++ b/locale/en_GB/LC_MESSAGES/django.po
@@ -1400,11 +1400,11 @@ msgid "user feedback"
 msgstr ""
 
 #: feedback/models.py
-msgid "user feedback"
+msgid "user feedbacks"
 msgstr ""
 
 #: feedback/wagtail_admin.py
-msgid "User feedback"
+msgid "User feedbacks"
 msgstr ""
 
 #: images/models.py
