--- a/locale/django.pot
+++ b/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-31 15:12+0300\n"
+"POT-Creation-Date: 2023-07-31 15:16+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -499,7 +499,7 @@ msgid "Base path"
 msgstr ""
 
 #: actions/forms.py
-msgid "Fill this for a multi-plan site when the plan does not live in the root of the domain"
+msgid "Fill this for a multi-plan site when the plan does not live in the root of the domain."
 msgstr ""
 
 #: actions/forms.py
